--- a/scss/objects/_icon-text.scss
+++ b/scss/objects/_icon-text.scss
@@ -18,22 +18,24 @@
 
 */
 
-.icon-text,
-.icon-text--rev{/* a, div, etc */
-    @extend %inline-block; /* This extend is found in core */
-}
+//.icon-text,
+//.icon-text--rev{/* a, div, etc */
+//    @extend %inline-block; /* This extend is found in core */
+//}
 
 .i{
     @extend %align--middle; //in core 
     overflow: hidden; /* for IE6 */
-    /* SMACSS line-height: 0; ? */
+    // SMACSS line-height: 0; ?
     .icon-text &,
-    .btn--icon &{
+    .btn--icon & {
         margin-right: $base-spacing-unit/3;
+        @extend %inline-block; /* This extend is found in core */
     }
 
     .icon-text--rev &,
     .btn--icon-rev &{
         margin-left: $base-spacing-unit/3;
+        @extend %inline-block; /* This extend is found in core */
     }
 }
