--- a/scss/objects/_visibility.scss
+++ b/scss/objects/_visibility.scss
@@ -60,6 +60,29 @@ Try to use these on a limited basis and avoid creating entirely different versio
 
 */
 
+/**
+
+### Hiding texts
+
+Hide a text that is replaced by an image
+
+```html
+<div class="block-s block--color-2">
+    <a class="block-element text--hidden">
+        I'm a hidden text
+    </p>
+</div>
+```
+
+*/
+
+.text--visually-hidden {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
 
 // Hide an element, but make it visible to screen readers
 // ----------------------------------------------------------------------------
@@ -73,6 +96,7 @@ Try to use these on a limited basis and avoid creating entirely different versio
 }
 
 
+
 // Common visible and hidden classes
 // ----------------------------------------------------------------------------
 
@@ -80,27 +104,36 @@ Try to use these on a limited basis and avoid creating entirely different versio
 @media only screen and (max-width: $breakpoint-small-max) {
     .visible--q-small {
         display:block;
+        &.inline {
+            display: inline;
+        }
     }
     .visible--q-medium,
     .visible--q-large,
-    .visible--q-xlarge,
-    .hidden--q-small {
+    .visible--q-xlarge {
         display: none;
+    }
+    .hidden--q-small {
+        display: none !important;
     }
 
 }
 
 //Show / Hide this element on a medium screen
 @media only screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-medium-max) {
-    .visible--q-medium
-     {
-        display:block
+    .visible--q-medium {
+        display:block;
+        &.inline {
+            display: inline;
+        }
     }
-    .hidden--q-medium,
     .visible--q-small,
     .visible--q-large,
     .visible--q-xlarge {
         display: none;
+    }
+    .hidden--q-medium {
+        display: none !important;
     }
 }
 
@@ -108,13 +141,18 @@ Try to use these on a limited basis and avoid creating entirely different versio
 @media only screen and (min-width:$breakpoint-large) and (max-width: $breakpoint-large-max){
 
     .visible--q-large {
-        display:block
+        display:block;
+        &.inline {
+            display: inline;
+        }
     }
-    .hidden--q-large,
     .visible--q-small,
     .visible--q-medium,
     .visible--q-xlarge {
         display: none;
+    }
+    .hidden--q-large {
+        display: none !important;
     }
 }
 
@@ -122,64 +160,108 @@ Try to use these on a limited basis and avoid creating entirely different versio
 @media only screen and (min-width: $breakpoint-xlarge) {
 
     .visible--q-xlarge {
-        display:block
+        display:block;
+        &.inline {
+            display: inline;
+        }
     }
 
-    .hidden--q-xlarge,
     .visible--q-small,
     .visible--q-medium,
     .visible--q-large {
         display: none;
     }
+    .hidden--q-xlarge {
+        display: none !important;
+    }
 }
 
 // or do you just include skinny and mobile classes class='visible--q-small visible--q-medium'
-//Show / Hide this element on a medium and small screen
+
+//Show / Hide this element on a small screen and down
+@media only screen and (max-width: $breakpoint-small-max) {
+    .visible--q-small-down {
+        display: block;
+        &.inline {
+            display: inline;
+        }
+    }
+    .visible--q-medium-up {
+        display: none;
+    }
+    .hidden--q-small-down {
+        display: none !important;
+    }
+}
+
+
+//Show / Hide this element on a medium screen and down
 @media only screen and (max-width: $breakpoint-medium-max) {
     .visible--q-medium-down {
         display: block;
+        &.inline {
+            display: inline;
+        }
+    }
+    .visible--q-large-up {
+        display: none;
     }
     .hidden--q-medium-down {
-        display: none;
+        display: none !important;
     }
 }
-
-@media only screen and (min-width: $breakpoint-large ) {
-    .visible--q-large-down {
-        display: block;
-    }
-    .hidden--q-large-down {
-        display: none;
-    }
-}
-
-//Show / Hide this element on a medium, large and xlarge screen
+//Show / Hide this element on a medium screen and up
 @media only screen and (min-width: $breakpoint-medium) {
     .visible--q-medium-up {
-        display:block;
-    }
-    .hidden--q-medium-up {
-        display:none;
-    }
-}
-
-@media only screen and (max-width: $breakpoint-small-max) {
-    .hidden--q-small-down {
-        display: none;
+        display: block;
+        &.inline {
+            display: inline;
+        }
     }
     .visible--q-small-down {
-        display: block;
+        display: none;
+    }
+    .hidden--q-medium-up {
+        display: none !important;
     }
 }
 
-//Show / Hide this element on a large and xlarge screen
 
+//Show / Hide this element on a large screen and down
+@media only screen and (max-width: $breakpoint-large-max ) {
+    .visible--q-large-down {
+        display: block;
+        &.inline {
+            display: inline;
+        }
+    }
+    .hidden--q-large-down {
+        display: none !important;
+    }
+}
 
+//Show / Hide this element on a large screen and up
 @media only screen and (min-width: $breakpoint-large ) {
     .visible--q-large-up {
-        display:block;
+        display: block;
+        &.inline {
+            display: inline;
+        }
+    }
+    .visible--q-medium-down {
+        display: none;
     }
     .hidden--q-large-up {
-        display:none;
+        display: none !important;
     }
 }
+
+
+//Show / Hide this element on a xlarge screen and up
+@media only screen and (min-width: $breakpoint-xlarge ) {
+    .visible--q-large-down {
+        display: none;
+    }
+}
+
+
